# stadium-pulse-ai

./: .env.example  .gitignore  README.md
backend/: README.md  chat_error.txt  pyproject.toml  requirements.txt  tool_error.txt
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  database.py  logging.py  security.py
backend/app/models/: __init__.py  crowd_snapshot.py  facility.py  faq.py  gate.py  transport.py  zone.py
backend/app/routers/: __init__.py  fan_chat.py  ops.py  stadium_info.py  ws_crowd.py
backend/app/schemas/: __init__.py  crowd.py  facility.py  faq.py  gate.py  transport.py  zone.py
backend/app/seed/: __init__.py  seed_data.py
backend/app/services/: __init__.py  ai.py  ai_tools.py  crowd_simulator.py  sustainability.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_services.py  test_ws_crowd.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  setupTests.ts
frontend/src/components/: FanChat.css  FanChat.test.tsx  FanChat.tsx  Layout.css  OpsDashboard.css  OpsDashboard.test.tsx  OpsDashboard.tsx
